# repository_stats

./: .env  Dockerfile  README.md  branch_l10n_master_graph.dot  docker-compose.yml  logging.yaml  pyproject.toml  requirements.txt
src/repository_stats/: __main__.py  branch_tree.py  commit_utils.py  logging_setup.py  repository_summary.py
